--- a/Homework3.qmd
+++ b/Homework3.qmd
@@ -33,7 +33,7 @@ library(dplyr)
 
 > arrange(filter(select(as_tibble(iris), starts_with("Petal"), Species), Petal.Length \< 1.55), Species)
 
-```{r}
+>```{r}
 as_tibble(iris) |>
   filter(startsWith("Petal"), Petal.Length < 1.55 ) |>
   arrange(Species)
@@ -127,10 +127,20 @@ yeast_data
   
 ## 2. Start a chain that removes the seq_name and nuc columns.
 ```{r}
-yeast_data <- yeast_data |>
-  mutate(
-    select(!seq_name & !nuc)
-)
+yeast_data <- yeast_data |> 
+  select(mcg:vac, class)
+
 yeast_data
+```
+
+### 3. Continue your chain to add columns corresponding to the mean and median of each numeric variable (mcg, gvh, alm, mit, erl, pox, and vac) at each class grouping (see the across() function as we did in the dplyr video!).
+```{r}
+yeast_data <- yeast_data |> 
+  select(mcg:vac, class) |>
+  mutate(across(where(is.numeric), list(mean = mean, sd = sd), .names = "{.col}_{.fn}")) |>
+  arrange(class) |>
+  group_by(class) 
+
+  yeast_data
 ```
 
