Task2 through #3 completed

--- a/Homework3.qmd
+++ b/Homework3.qmd
@@ -31,13 +31,12 @@ library(dplyr)
 
 ### 5. Rewrite the following nested function call using baseR’s chaining operator:
 
-> arrange(filter(select(as_tibble(iris), starts_with("Petal"), Species), Petal.Length \< 1.55), Species)
+arrange(filter(select(as_tibble(iris), starts_with("Petal"), Species), Petal.Length < 1.55), Species)
 
->```{r}
+#is re-written as 
 as_tibble(iris) |>
-  filter(startsWith("Petal"), Petal.Length < 1.55 ) |>
-  arrange(Species)
-```
+  filter(iris, starts_with("Petal"), Petal.Length < 1.55 )
+
 
 ### 6. What is meant by long format data and wide format data? Which do we generally prefer for statistical analysis?
 
@@ -89,32 +88,17 @@ glass_data
 > 3.  Continue your chain and keep only observations where the Fe variable is less than 0.2 and the Type of Glass is either “tableware” or “headlamp”.
 
 ```{r}
-glass_data <- glass_data |>
-  mutate(Type = 
-    ifelse(Type == 1,
-           "building_windows_float",
-      ifelse(Type ==2, 
-             "bulidning_windows_non_float",
-        ifelse(Type == 3,
-               "vehicle_windows_float",
-          ifelse(Type == 4,
-                 "vehicle_windows_non_float",
-            ifelse(Type == 5,
-                   "containers",
-              ifelse(Type == 6,
-                     "tableware",
-                ifelse(Type == 7,
-                       "headlamps",
-                       "Error")))))))) |>
-  filter(Type %in% "headlamps")
-#cannot get filter to work
+glass_data |>
+  filter(Fe < 0.2)
+#cannot get filter to work properly
 
 glass_data
 ```
+
 ## Yeast Data
 
 ### 1. Read this data into R directly from the URL using functions from the tidyverse. Notice that the data doesn’t include column names - add those (in a manner of your choosing). Print out the tibble (just call the object name).
- 
+
 ```{r}
 yeast_data <- read_table(
   "yeast.data",
@@ -124,8 +108,9 @@ yeast_data <- read_table(
 
 yeast_data
 ```
-  
+
 ## 2. Start a chain that removes the seq_name and nuc columns.
+
 ```{r}
 yeast_data <- yeast_data |> 
   select(mcg:vac, class)
@@ -134,13 +119,96 @@ yeast_data
 ```
 
 ### 3. Continue your chain to add columns corresponding to the mean and median of each numeric variable (mcg, gvh, alm, mit, erl, pox, and vac) at each class grouping (see the across() function as we did in the dplyr video!).
+
 ```{r}
 yeast_data <- yeast_data |> 
   select(mcg:vac, class) |>
   mutate(across(where(is.numeric), list(mean = mean, sd = sd), .names = "{.col}_{.fn}")) |>
-  arrange(class) |>
+  dplyr::arrange(class) |>
   group_by(class) 
 
   yeast_data
+```
+
+## Task 2: Combining Excel and Delimited Data
+
+> 1.  There is an excel version of the white wine data set available at https://www4.stat.ncsu.edu/\~online/datasets/white-wine.xlsx.
+>
+>     • Download this file
+>
+>     • Place it in a folder you know (such as your working directory for your project)
+>
+>     • Import the data from the first sheet using the readxl package
+>
+>     • Print out the tibble (just call the object name)
+
+```{r}
+white_wine_data <- read_excel("white-wine.xlsx")
+white_wine_data
+```
+
+## 2. When you print the data set out to the console, you may notice that some of the variable names are surrounded by backticks. This is because they are non-standard (they include a space in them). We can rename them in a number of ways. We’ll do it by reading in the variable names from the 2nd sheet of the same file.
+> • Read in the data from the 2nd sheet. This should return a data frame with one column containing alternative versions of the variable names.
+> • Grab that column and overwrite the current column names (colnames()) of your white wine
+tibble
+
+```{r}
+white_wine_variables <- read_excel("white-wine.xlsx",
+  sheet = excel_sheets("white-wine.xlsx")[2])
+
+colnames(white_wine_data) <- white_wine_variables$Variables
+
+white_wine_data
+```
+
+## 3. Lastly, add a column to this data set to indicate the wines are white. That is, add a column that has values of ‘white’ for every observation.
+```{r}
+for (i in white_wine_data[1]){
+  white_wine_data$color <- c("white")
+}
+
+white_wine_data
+```
+
+## 4. There is a semi-colon delimited version of the red wine data set available at https://www4.stat.ncsu.edu/~online/datasets/red-wine.csv.
+> • Read this in using the readr package. Be careful that the columns are read in as the correct type!
+> • You should replace the variable names as done above
+> • You should append a column denoting the type as “red”
+
+```{r}
+red_wine_data <- read_delim("red-wine.csv",
+delim = ";", 
+col_names = c("fixed_acidity","volatile_acidity","citric_acid","residual_sugar","chlorides","free_sulfur_dioxide","total_sulfur_dioxide","density","pH","sulphates","alcohol","quality"))
+
+
+str(red_wine_data)
+red_wine_data
+```
+
+5. Combine these two data sets into one data set. They both have the exact same columns so this is an
+easy append task!
+• Use the dplyr::bind_rows() function (see the help) to create one tibble containing all of the wine data.
+```{r}
+
+```
+
+6. Start a chain onr your new combined data object to filter the data to only look at high-quality wines (quality > 6.5) and wines that have a reasonable alcohol value (alcohol < 132).
+```{r}
+
+```
+
+7. Continue your chain to now sort the data from highest quality to lowest.
+```{r}
+
+```
+
+8. Continue your chain to select only the variables that contain acid, the alcohol variable, the type variable, and the quality variable.
+```{r}
+
+```
+
+9. Continue your chain to add the mean and standard deviation of the alcohol variable to the data set for each setting of the quality variable.
+```{r}
+
 ```
 
