--- a/Homework3.qmd
+++ b/Homework3.qmd
@@ -19,7 +19,7 @@ library(dplyr)
 
 ### 2. What are the major benefits of using R projects?
 
-> A:
+> A: The ability to use a single source software program that allows you to easily model a data set for analysis without learing a lot of syntax like you do with other sofware packages.
 
 ### 3. What is git and what is github?
 
@@ -31,12 +31,9 @@ library(dplyr)
 
 ### 5. Rewrite the following nested function call using baseR’s chaining operator:
 
-arrange(filter(select(as_tibble(iris), starts_with("Petal"), Species), Petal.Length < 1.55), Species)
+arrange(filter(select(as_tibble(iris), starts_with("Petal"), Species), Petal.Length \< 1.55), Species)
 
-#is re-written as 
-as_tibble(iris) |>
-  filter(iris, starts_with("Petal"), Petal.Length < 1.55 )
-
+#is re-written as as_tibble(iris) \|\> filter(iris, starts_with("Petal"), Petal.Length \< 1.55 )
 
 ### 6. What is meant by long format data and wide format data? Which do we generally prefer for statistical analysis?
 
@@ -63,8 +60,33 @@ glass_data
 > 2.  Start a chain that would overwrite the Type_of_glass variable using mutate(). Create a character string version (that is, replace 1 with “building_windows_float_processed”, 2 with “building_win. . . ”, etc.) instead (see the variable descriptions above to give meaningful values). (If you are familiar with factors, feel free to use that instead of a character string variable - otherwise, think if/then/else via ifelse().)
 
 ```{r}
+#cannot get code to operate properly, renders Type "Error" for every observation
 
-glass_data <- glass_data |>
+glass_data |>
+  mutate(Type = 
+    ifelse(Type == 1,
+           "building_windows_float",
+      ifelse(Type ==2, 
+             "bulidning_windows_non_float",
+        ifelse(Type == 3,
+               "vehicle_windows_float",
+          ifelse(Type == 4,
+                 "vehicle_windows_non_float",
+            ifelse(Type == 5,
+                   "containers",
+              ifelse(Type == 6,
+                     "tableware",
+                ifelse(Type == 7,
+                       "headlamps", "Error"))))))))
+
+```
+
+> 3.  Continue your chain and keep only observations where the Fe variable is less than 0.2 and the Type of Glass is either “tableware” or “headlamp”.
+
+```{r}
+#cannot get code to operate properly, renders Type "Error" for every observation
+
+glass_data |>
   mutate(Type = 
     ifelse(Type == 1,
            "building_windows_float",
@@ -80,19 +102,9 @@ glass_data <- glass_data |>
                      "tableware",
                 ifelse(Type == 7,
                        "headlamps",
-                       "Error"))))))))
-
-glass_data
-```
-
-> 3.  Continue your chain and keep only observations where the Fe variable is less than 0.2 and the Type of Glass is either “tableware” or “headlamp”.
-
-```{r}
-glass_data |>
+                       "Error")))))))) |>
   filter(Fe < 0.2)
-#cannot get filter to work properly
 
-glass_data
 ```
 
 ## Yeast Data
@@ -148,9 +160,8 @@ white_wine_data
 ```
 
 ## 2. When you print the data set out to the console, you may notice that some of the variable names are surrounded by backticks. This is because they are non-standard (they include a space in them). We can rename them in a number of ways. We’ll do it by reading in the variable names from the 2nd sheet of the same file.
-> • Read in the data from the 2nd sheet. This should return a data frame with one column containing alternative versions of the variable names.
-> • Grab that column and overwrite the current column names (colnames()) of your white wine
-tibble
+
+> • Read in the data from the 2nd sheet. This should return a data frame with one column containing alternative versions of the variable names. • Grab that column and overwrite the current column names (colnames()) of your white wine tibble
 
 ```{r}
 white_wine_variables <- read_excel("white-wine.xlsx",
@@ -162,6 +173,7 @@ white_wine_data
 ```
 
 ## 3. Lastly, add a column to this data set to indicate the wines are white. That is, add a column that has values of ‘white’ for every observation.
+
 ```{r}
 for (i in white_wine_data[1]){
   white_wine_data$color <- c("white")
@@ -170,45 +182,93 @@ for (i in white_wine_data[1]){
 white_wine_data
 ```
 
-## 4. There is a semi-colon delimited version of the red wine data set available at https://www4.stat.ncsu.edu/~online/datasets/red-wine.csv.
-> • Read this in using the readr package. Be careful that the columns are read in as the correct type!
-> • You should replace the variable names as done above
-> • You should append a column denoting the type as “red”
+## 4. There is a semi-colon delimited version of the red wine data set available at https://www4.stat.ncsu.edu/\~online/datasets/red-wine.csv.
+
+> • Read this in using the readr package. Be careful that the columns are read in as the correct type! • You should replace the variable names as done above • You should append a column denoting the type as “red”
 
 ```{r}
 red_wine_data <- read_delim("red-wine.csv",
 delim = ";", 
-col_names = c("fixed_acidity","volatile_acidity","citric_acid","residual_sugar","chlorides","free_sulfur_dioxide","total_sulfur_dioxide","density","pH","sulphates","alcohol","quality"))
+col_names = c("fixed_acidity","volatile_acidity","citric_acid","residual_sugar","chlorides","free_sulfur_dioxide","total_sulfur_dioxide","density","pH","sulphates","alcohol","quality"),
+skip = 1,
+show_col_types = FALSE
+)
+for (i in red_wine_data[1]){
+  red_wine_data$color <- c("red")
+}
 
 
-str(red_wine_data)
 red_wine_data
 ```
 
-5. Combine these two data sets into one data set. They both have the exact same columns so this is an
-easy append task!
-• Use the dplyr::bind_rows() function (see the help) to create one tibble containing all of the wine data.
+5.  Combine these two data sets into one data set. They both have the exact same columns so this is an easy append task! \> • Use the dplyr::bind_rows() function (see the help) to create one tibble containing all of the wine data.
+
+```{r}
+wine_data <- dplyr::bind_rows(white_wine_data, red_wine_data)
+
+wine_data
+```
+
+6.  Start a chain onr your new combined data object to filter the data to only look at high-quality wines (quality \> 6.5) and wines that have a reasonable alcohol value (alcohol \< 132).
+
+```{r}
+wine_data |>
+  filter(quality > 6.5, alcohol < 132)
+```
+
+7.  Continue your chain to now sort the data from highest quality to lowest.
+
+```{r}
+wine_data |>
+  filter(quality > 6.5, alcohol < 132) |>
+  arrange(desc(quality))
+```
+
+8.  Continue your chain to select only the variables that contain acid, the alcohol variable, the type variable, and the quality variable.
+
+```{r}
+wine_data |>
+  filter(quality > 6.5, alcohol < 132) |>
+  arrange(desc(quality)) |>
+  select(contains("acid"), alcohol, color, quality)
+```
+
+9.  Continue your chain to add the mean and standard deviation of the alcohol variable to the data set for each setting of the quality variable.
+
+```{r}
+wine_data <- wine_data |>
+  filter(quality > 6.5, alcohol < 132) |>
+  arrange(desc(quality)) |>
+  select(contains("acid"), alcohol, color, quality)|>
+  group_by(color) |>
+  mutate(
+    alcohol_mean = mean(alcohol),
+    alcohol_sd   = sd(alcohol)
+  ) 
+wine_data 
+```
+
+# Task 3: Database Practice
+
+## Download the Lahman.db file associated with the Connecting to Databases notes/video.
+
+### 1. Connect to the database and then look at all of the tables in the database.
+
+```{r}
+library(DBI)
+con <- dbConnect(RSQLite::SQLite(), "lahman.db")
+dbListTables(con)
+```
+
+### 2. Use the tbl() function and dplyr to return all of the data from the Teams table for the year 2015.
+
+```{r}
+dplyr::tbl(con, "Teams") |>
+  filter(yearID %in% 2015)
+```
+
+### 3. Repeat the above by using the sql() function within tbl() (here you have to write actual SQL!).
+
 ```{r}
 
 ```
-
-6. Start a chain onr your new combined data object to filter the data to only look at high-quality wines (quality > 6.5) and wines that have a reasonable alcohol value (alcohol < 132).
-```{r}
-
-```
-
-7. Continue your chain to now sort the data from highest quality to lowest.
-```{r}
-
-```
-
-8. Continue your chain to select only the variables that contain acid, the alcohol variable, the type variable, and the quality variable.
-```{r}
-
-```
-
-9. Continue your chain to add the mean and standard deviation of the alcohol variable to the data set for each setting of the quality variable.
-```{r}
-
-```
-
